Restructure docker tests for compatibility with CircleCI