@@ -18,10 +18,19 @@ import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.List;
 
 public class SubmissionCodeRunnerTest {
 
-    private VirtualFile src;
+    String longText = "attis nulla, eu vestibulum orci. Aenean a ipsum maximus erat pellentesque accumsan.";
+    String filesDir = "./src/test/resources/test_code";
+    String solutionsFile = "/solutions.py";
+    String solutionsFilePath = Paths.get(filesDir + solutionsFile).toAbsolutePath().normalize().toString();
+    String testSuiteFile = "/test_suite.py";
+    String testSuiteFilePath = Paths.get(filesDir + testSuiteFile).toAbsolutePath().normalize().toString();
+    String initFile = "/__init__.py";
+    String initFilePath = Paths.get(filesDir + initFile).toAbsolutePath().normalize().toString();
+    private VirtualFile solutions;
     private VirtualFile test;
     private VirtualFile init;
 
@@ -29,29 +38,22 @@ public class SubmissionCodeRunnerTest {
     public void setUp() throws IOException {
         Path path = Paths.get("./runner/s1");
         FileSystemUtils.deleteRecursively(path);
-
-        Path psrc = Paths.get("./src/test/resources/test_code/solutioncode.py");
-        src = new VirtualFile(psrc.toAbsolutePath().normalize().toString(), "/solutioncode.py");
-
-        Path ptest = Paths.get("./src/test/resources/test_code/test_suite.py");
-        test = new VirtualFile(ptest.toAbsolutePath().normalize().toString(), "/test_suite.py");
-
-        Path pInit = Paths.get("./src/test/resources/test_code/__init__.py");
-        init = new VirtualFile(pInit.toAbsolutePath().normalize().toString(), "/__init__.py");
+        solutions = new VirtualFile(solutionsFilePath, solutionsFile);
+        test = new VirtualFile(testSuiteFilePath, testSuiteFile);
+        init = new VirtualFile(initFilePath, initFile);
     }
 
     @Test
-    public void testSubmission() throws DockerCertificateException, InterruptedException, DockerException, IOException {
+    public void testSubmission() throws DockerCertificateException, DockerException, IOException, InterruptedException {
         Exercise ex = Exercise.builder()
                 .id("e1")
                 .private_files(Arrays.asList(init, test))
                 .type(ExerciseType.code).build();
-
         CodeSubmission sub = CodeSubmission.builder()
                 .id("s1")
                 .exerciseId(ex.getId())
-                .publicFiles(Arrays.asList(init, src))
-                .selectedFileId(src.getId())
+                .publicFiles(List.of(init, solutions))
+                .selectedFileId(solutions.getId())
                 .isGraded(true)
                 .build();
 
@@ -61,19 +63,18 @@ public class SubmissionCodeRunnerTest {
         Assertions.assertTrue(result.getEvalLog().toLowerCase().contains("ran 8 tests in"));
     }
 
-
     @Test
-    public void testSmoketest() throws DockerCertificateException, InterruptedException, DockerException, IOException {
+    public void smokeTest() throws DockerCertificateException, InterruptedException, DockerException, IOException {
         Exercise ex = Exercise.builder()
                 .id("e1")
-                .private_files(Arrays.asList(init, test))
+                .private_files(List.of(init, test))
                 .type(ExerciseType.code).build();
 
         CodeSubmission sub = CodeSubmission.builder()
                 .id("s1")
                 .exerciseId(ex.getId())
-                .publicFiles(Arrays.asList(init, src))
-                .selectedFileId(src.getId())
+                .publicFiles(List.of(init, solutions))
+                .selectedFileId(solutions.getId())
                 .isGraded(false)
                 .build();
 
@@ -83,62 +84,37 @@ public class SubmissionCodeRunnerTest {
         Assertions.assertTrue(result.getEvalLog().isEmpty());
     }
 
-
     @Test
     public void limitConsole() {
-        StringBuffer sb = new StringBuffer();
-        for(int i=0 ; i < 100000; i++){
-            sb.append("attis nulla, eu vestibulum orci. Aenean a ipsum maximus erat pellentesque accumsan.");
-        }
-        RunResult rr = new RunResult(sb.toString(), null, null, 1000, false, false);
-
-        ExecResult execResult = new SubmissionCodeRunner(null, new FSHierarchySerializer()).mapSmokeToExecResult(rr, null, null);
+        RunResult runResult = new RunResult(longText.repeat(100000), null, null, 1000, false, false);
+        ExecResult execResult = new SubmissionCodeRunner(null,
+                new FSHierarchySerializer()).mapSmokeToExecResult(runResult, null, null);
 
         Assertions.assertTrue(execResult.getStdout().length() < 100055);
         Assertions.assertTrue(execResult.getStdout().contains("Logs size exceeded limit. Log has been truncated."));
     }
 
-
     @Test
-    public void limitEvallog() {
-        StringBuffer sb = new StringBuffer();
-        for(int i=0 ; i < 1000; i++){
-            sb.append("attis nulla, eu vestibulum orci. Aenean a ipsum maximus erat pellentesque accumsan.");
-        }
-        sb.append("======================----------------------======================");
-        for(int i=0 ; i < 10000; i++){
-            sb.append("attis nulla, eu vestibulum orci. Aenean a ipsum maximus erat pellentesque accumsan.");
-        }
-        RunResult rr = new RunResult(null, null, sb.toString(), 1000, false, false);
-
-        ExecResult execResult = new SubmissionCodeRunner(null, new FSHierarchySerializer()).mapSubmissionToExecResult(rr);
-
+    public void limitEvalLog() {
+        String stdErr = longText.repeat(1000) + "======================----------------------======================" + longText.repeat(10000);
+        RunResult runResult = new RunResult(null, null, stdErr, 1000, false, false);
+        ExecResult execResult = new SubmissionCodeRunner(null, new FSHierarchySerializer()).mapSubmissionToExecResult(runResult);
         Assertions.assertTrue(execResult.getEvalLog().length() < 100075);
-        Assertions.assertTrue(execResult.getEvalLog().contains("Logs size exceeded limit. Beginning of log has been truncated "));
+        Assertions.assertTrue(execResult.getEvalLog().contains("Logs size exceeded limit. Beginning of log has been truncated"));
     }
 
     @Test
-    public void evalMissesDelimterReturnsEmpty() {
-        StringBuffer sb = new StringBuffer();
-        for(int i=0 ; i < 100000; i++){
-            sb.append("attis nulla, eu vestibulum orci. Aenean a ipsum maximus erat pellentesque accumsan.");
-        }
-        RunResult rr = new RunResult(null, null, sb.toString(), 1000, false, false);
-
-        ExecResult execResult = new SubmissionCodeRunner(null, new FSHierarchySerializer()).mapSubmissionToExecResult(rr);
-
+    public void evalMissesDelimiterReturnsEmpty() {
+        RunResult runResult = new RunResult(null, null, longText.repeat(100000), 1000, false, false);
+        ExecResult execResult = new SubmissionCodeRunner(null, new FSHierarchySerializer()).mapSubmissionToExecResult(runResult);
         Assertions.assertTrue(execResult.getEvalLog().isEmpty());
     }
 
     @Test
     public void emptyEval() {
-
-        RunResult rr = new RunResult("SomeText", null, "", 1000, false, false);
-
-        ExecResult execResult = new SubmissionCodeRunner(null, new FSHierarchySerializer()).mapSubmissionToExecResult(rr);
-
+        RunResult runResult = new RunResult("SomeText", null, "", 1000, false, false);
+        ExecResult execResult = new SubmissionCodeRunner(null, new FSHierarchySerializer()).mapSubmissionToExecResult(runResult);
         Assertions.assertTrue(execResult.getStdout().isEmpty());
         Assertions.assertTrue(execResult.getEvalLog().isEmpty());
     }
-
 }
